// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: callStack
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                mov: store a,
                compute: callARegStack,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg,
                        check: defined,
                        check: changed,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            mov: stack store,
                            check: changed,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        mov: store a,
        compute: callStackAReg,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        check: defined,
        check: changed,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                check: defined,
                mov: store a,
                filter: Function,
                mov: store b,
                compute: Function,
                mov: a store,
                mov: value store,
                barrier: {
                  barrierID: 1,
                  priority: barrier
                },
                mov: value store,
                mov: store stack,
                check: changed
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg,
                        check: defined,
                        check: changed,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            check: defined,
                            mov: stack store,
                            check: changed,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                run: watcher
                              ],
                              next: []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        run: watcher
      ],
      next: []
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    check: defined,
    mov: stack store,
    check: changed,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        check: defined,
        mov: store a,
        filter: Function,
        mov: store b,
        compute: Function,
        mov: a store,
        mov: value store,
        barrier: {
          barrierID: 1,
          priority: barrier
        },
        mov: value store,
        mov: store stack,
        check: changed
      ],
      next: [
        Node {
          seq: [
            check: defined,
            mov: stack store,
            check: changed,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                check: defined,
                check: changed,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    check: defined,
                    mov: stack store,
                    check: changed,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        run: watcher
                      ],
                      next: []
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
